test_suite/alan-2022-examples/failing/009350_mutation.alan
source V while 3320 do relax end function or6() begin relax end begin relax end
